# stellarium-0.11.4

./: CMakeLists.txt  CMakeLists.txt~  searchUsrLib.txt
builds/unix/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  Makefile  cmake_install.cmake  (+1 more)
data/: Makefile
doc/: Makefile  cmake_install.cmake  stellarium.1  stellarium.pod
landscapes/: Makefile  cmake_install.cmake
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
nebulae/: Makefile  cmake_install.cmake
plugins/: CMakeLists.txt  Makefile  cmake_install.cmake
plugins/KeplerMission/: CMakeLists.txt  Makefile  cmake_install.cmake  installer.iss
plugins/KeplerMission/resources/: KeplerMission.qrc~
plugins/KeplerMission/src/: CMakeLists.txt  CMakeLists.txt~  KeplerMission.cpp  KeplerMission.hpp  Makefile  cmake_install.cmake  qrc_KeplerMission.cxx  qrc_KeplerMission.cxx~  ui_KeplerMissionDialog.h
plugins/KeplerMission/src/gui/: KeplerMissionDialog.cpp  KeplerMissionDialog.hpp  KeplerMissionDialog.ui
po/: Makefile  cmake_install.cmake
scripts/: Makefile
skycultures/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  StelMainGraphicsView.cpp  cmake_install.cmake  qrc_guiRes.cxx  qrc_mainRes.cxx  ui_AtmosphereDialog.h  ui_addRemoveLandscapesDialog.h  ui_configurationDialog.h  ui_dateTimeDialogGui.h  ui_helpDialogGui.h  ui_locationDialogGui.h  ui_scriptConsole.h  ui_searchDialogGui.h  ui_viewDialog.h
stars/: Makefile  cmake_install.cmake
textures/: Makefile  cmake_install.cmake
(+355 files in other folders)
