SET(KEPLERMISSION_PLUGIN_MAJOR "0")
SET(KEPLERMISSION_PLUGIN_MINOR "0")
SET(KEPLERMISSION_PLUGIN_PATCH "2")
SET(KEPLERMISSION_VERSION "${KEPLERMISSION_PLUGIN_MAJOR}.${KEPLERMISSION_PLUGIN_MINOR}.${KEPLERMISSION_PLUGIN_PATCH}")

IF(APPLE)
    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
ElSE(APPLE)
    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
ENDIF(APPLE)

ADD_DEFINITIONS(-DKEPLERMISSION_PLUGIN_VERSION="${KEPLERMISSION_VERSION}")

ADD_SUBDIRECTORY( src )

INSTALL(FILES DESTINATION "modules/KeplerMission")
